Refactor: NetemManager class created

--- a/Host/config.json
+++ b/Host/config.json
@@ -1,9 +1,9 @@
 {
+  "interface": "lo",
   "host": {
     "id": 1,
     "address": "127.0.0.1",
-    "port": 8881,
-    "interface": "lo"
+    "port": 8881
   },
   "peers": [
     {
