follower bind-all

--- a/masterConfig.json
+++ b/masterConfig.json
@@ -1,14 +1,31 @@
 {
     "algorithm": "rethinkdb",
-    "mode": "local",
-    "testDaemon": "127.0.0.1:12346",
     "nodes": [
         {
             "id": 1,
-            "rpcPort": 33264,
-            "address": "127.0.0.1",
-            "interface": "lo",
-            "port": 52847
+            "vmID": "vm-node-1",
+            "address": "130.211.126.48",
+            "rpcPort": 12347,
+            "port": 12348,
+            "interface": "nic0"
+        },
+        {
+            "id": 2,
+            "vmID": "vm-node-2",
+            "address": "104.154.109.167",
+            "rpcPort": 12347,
+            "port": 12348,
+            "interface": "nic0"
+        },
+        {
+            "id": 3,
+            "vmID": "vm-node-3",
+            "address": "104.197.161.244",
+            "rpcPort": 12347,
+            "port": 12348,
+            "interface": "nic0"
         }
-    ]
+    ],
+    "mode": "gce",
+    "testDaemon": "130.211.126.48:12346"
 }
