--- a/masterConfig.json
+++ b/masterConfig.json
@@ -1,31 +1,28 @@
 {
-    "testDaemon": "104.155.174.113:12346",
     "nodes": [
         {
-            "address": "104.155.174.113",
-            "interface": "nic0",
-            "rpcPort": 12347,
+            "address": "127.0.0.1",
+            "port": 34765,
+            "interface": "lo",
             "id": 1,
-            "vmID": "vm-node-1",
-            "port": 12348
+            "rpcPort": 43940
         },
         {
-            "address": "104.155.189.226",
-            "interface": "nic0",
-            "rpcPort": 12347,
+            "address": "127.0.0.1",
+            "port": 38159,
+            "interface": "lo",
             "id": 2,
-            "vmID": "vm-node-2",
-            "port": 12348
+            "rpcPort": 60765
         },
         {
-            "address": "104.155.185.255",
-            "interface": "nic0",
-            "rpcPort": 12347,
+            "address": "127.0.0.1",
+            "port": 47861,
+            "interface": "lo",
             "id": 3,
-            "vmID": "vm-node-3",
-            "port": 12348
+            "rpcPort": 36019
         }
     ],
     "algorithm": "rethinkdb",
-    "mode": "gce"
+    "mode": "local",
+    "testDaemon": "127.0.0.1:12346"
 }
