report final version

--- a/report/Makefile
+++ b/report/Makefile
@@ -5,8 +5,7 @@ BUILDTEX=$(TEX) $(PROJECT).tex
 
 all:
 	$(BUILDTEX)
-	#$(BIBTEX) $(PROJECT)
-	#$(BUILDTEX)
+	$(BUILDTEX)
 
 clean:
 	rm -f *.swp *.aux *.bbl *.blg *.log *.out *.toc *.pdf *~
